# yadro_test

./: .gitignore  CMakeLists.txt  REAME.md
include/: client.hpp  clientStatus.hpp  club.hpp  command.hpp  errors.hpp  eventHadler.hpp  eventIds.hpp  generatedEvent.hpp  table.hpp
src/: client.cpp  club.cpp  command.cpp  eventHandler.cpp  generatedEvent.cpp  main.cpp  table.cpp
test/: test1.txt  test2.txt
